Initialize boilerplate for fine-tuning models

--- a/medical_information_simplification.ipynb
+++ b/medical_information_simplification.ipynb
@@ -30,7 +30,9 @@
     "TODO:\n",
     "- Describe the background information for why this model is useful, particularly for elderly patients\n",
     "- Describe the datasets we are using and which models we are evaluating\n",
-    "- Give instructions for how to run our code"
+    "- Give instructions for how to run our code\n",
+    "\n",
+    "We can copy-paste most of this in from info we'll write on the slides"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +365,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fine-Tuning Pretrained Models on the Wikismall Dataset"
+    "## Fine-Tuning Pretrained Models on the Wikismall & MIMIC Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GPT-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT2 - Load in base model and tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT2 - Define model (base model with an additional layer processing the output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT2 - Initialize fine-tunable model & optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT2 - Create Wikismall data loaders for training, validation, and test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT2 - Fine-tuning training loop for Wikismall dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPT2 - Fine-tuning training loop for MIMIC dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT - Load in base model and tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT - Define model (base model with an additional layer processing the output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT - Initialize fine-tunable model & optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT - Create Wikismall data loaders for training, validation, and test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT - Fine-tuning training loop for Wikismall dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT - Fine-tuning training loop for MIMIC dataset"
    ]
   },
   {
@@ -379,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load in base T5 model and tokenizer\n",
+    "# T5 - load in base model and tokenizer\n",
     "\n",
     "# TODO: could use \"t5-small\" if this takes too long to train\n",
     "t5_model_name = \"t5-base\"\n",
@@ -399,18 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Wikismall data loaders for T5 training, validation, and test\n",
-    "\n",
-    "t5_wikismall_train_loader, t5_wikismall_val_loader, t5_wikismall_test_loader = load_wikismall_dataset(t5_tokenizer, WIKISMALL_BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a fine-tunable T5 model (base T5 with an additional layer processing the output)\n",
+    "# T5 - Define model (base model with an additional layer processing the output)\n",
     "\n",
     "class T5Simplifier(nn.Module):\n",
     "    \"\"\"\n",
@@ -452,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the fine-tunable T5 model & optimizer\n",
+    "# T5 - Initialize fine-tunable model & optimizer\n",
     "\n",
     "t5_simplifier = T5Simplifier(t5_base).to(DEVICE)\n",
     "\n",
@@ -465,7 +578,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training loop (fine-tune the T5 model on the Wikismall dataset)\n",
+    "# T5 - Create Wikismall data loaders for training, validation, and test\n",
+    "\n",
+    "t5_wikismall_train_loader, t5_wikismall_val_loader, t5_wikismall_test_loader = load_wikismall_dataset(t5_tokenizer, WIKISMALL_BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# T5 - Fine-tuning training loop for Wikismall dataset\n",
     "\n",
     "NUM_EPOCHS = 3\n",
     "\n",
@@ -512,26 +636,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fine-Tuning Pretrained Models on the MIMIC Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### T5"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load in base T5 model and tokenizer\n",
+    "# MIMIC - Load in base T5 model and tokenizer\n",
     "\n",
     "# TODO: we should eventually be fine-tuning the version of T5 already fine-tuned on Wikismall here\n",
     "\n",
@@ -543,7 +653,21 @@
     "\n",
     "# Freeze base model parameters\n",
     "for param in t5_base.parameters():\n",
-    "    param.requires_grad = False"
+    "    param.requires_grad = False\n",
+    "\n",
+    "\n",
+    "\n",
+    "# MIMIC - create data loaders for T5 training, validation, and test\n",
+    "\n",
+    "# TODO: took 8 minutes to run with MIMIC_DATA_USAGE_FRACTION set to 0.25 - probably worth saving the final dataframes and just loading/using those directly\n",
+    "t5_mimic_train_loader, t5_mimic_val_loader, t5_mimic_test_loader = load_mimic_dataset(mimic_df, t5_tokenizer, MIMIC_BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BART"
    ]
   },
   {
@@ -552,10 +676,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create MIMIC data loaders for T5 training, validation, and test\n",
-    "\n",
-    "# TODO: took 8 minutes to run with MIMIC_DATA_USAGE_FRACTION set to 0.25 - probably worth saving the final dataframes and just loading/using those directly\n",
-    "t5_mimic_train_loader, t5_mimic_val_loader, t5_mimic_test_loader = load_mimic_dataset(mimic_df, t5_tokenizer, MIMIC_BATCH_SIZE)"
+    "# BART - Load in base model and tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART - Define model (base model with an additional layer processing the output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART - Initialize fine-tunable model & optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART - Create Wikismall data loaders for training, validation, and test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART - Fine-tuning training loop for Wikismall dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART - Fine-tuning training loop for MIMIC dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BigBirdPegasus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigBirdPegasus - Load in base model and tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigBirdPegasus - Define model (base model with an additional layer processing the output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigBirdPegasus - Initialize fine-tunable model & optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigBirdPegasus - Create Wikismall data loaders for training, validation, and test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigBirdPegasus - Fine-tuning training loop for Wikismall dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigBirdPegasus - Fine-tuning training loop for MIMIC dataset"
    ]
   },
   {
