Load in all models from huggingface

--- a/medical_information_simplification.ipynb
+++ b/medical_information_simplification.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.optim import AdamW\n",
-    "from transformers import PreTrainedTokenizer, T5Tokenizer, T5ForConditionalGeneration"
+    "from transformers import PreTrainedTokenizer, T5Tokenizer, T5ForConditionalGeneration, AutoModelForCausalLM, AutoTokenizer, BertModel, BertTokenizer, BartModel, BigBirdPegasusModel"
    ]
   },
   {
@@ -70,6 +70,18 @@
    "source": [
     "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'mps' if torch.mps.is_available() else 'cpu')\n",
     "print(f\"Using device {DEVICE}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you want to delete the models from your computer to free up space, you can use the following in your terminal:\n",
+    "\n",
+    "# pip install huggingface_hub[\"cli\"]\n",
+    "# huggingface-cli delete-cache"
    ]
   },
   {
@@ -381,7 +393,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT2 - Load in base model and tokenizer"
+    "# GPT2 - Load in base model and tokenizer\n",
+    "gpt2_model_name = \"gpt2\"\n",
+    "\n",
+    "gpt2 = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
+    "gpt2.to(DEVICE)\n",
+    "gpt2_tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "\n",
+    "# Freeze base model parameters\n",
+    "for param in gpt2.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/gpt2#training"
    ]
   },
   {
@@ -442,7 +465,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BERT - Load in base model and tokenizer"
+    "# BERT - Load in base model and tokenizer\n",
+    "\n",
+    "bert_model_name = \"bert-base-uncased\"\n",
+    "\n",
+    "bert_base = BertModel.from_pretrained(\"bert-base-uncased\", torch_dtype=torch.float16)\n",
+    "bert_base.to(DEVICE)\n",
+    "bert_tokenizer = BertTokenizer.from_pretrained(bert_model_name)\n",
+    "\n",
+    "# Freeze base model parameters\n",
+    "for param in bert_base.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "\n",
+    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/bert"
    ]
   },
   {
@@ -505,7 +541,7 @@
    "source": [
     "# T5 - load in base model and tokenizer\n",
     "\n",
-    "# TODO: could use \"t5-small\" if this takes too long to train\n",
+    "# Could use \"t5-small\" if this takes too long to train\n",
     "t5_model_name = \"t5-base\"\n",
     "\n",
     "t5_base = T5ForConditionalGeneration.from_pretrained(t5_model_name)\n",
@@ -514,7 +550,9 @@
     "\n",
     "# Freeze base model parameters\n",
     "for param in t5_base.parameters():\n",
-    "    param.requires_grad = False"
+    "    param.requires_grad = False\n",
+    "\n",
+    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/t5"
    ]
   },
   {
@@ -676,7 +714,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BART - Load in base model and tokenizer"
+    "# BART - Load in base model and tokenizer\n",
+    "\n",
+    "bart_model_name = \"facebook/bart-base\"\n",
+    "\n",
+    "bart_base = BartModel.from_pretrained(bart_model_name)\n",
+    "bart_base.to(DEVICE)\n",
+    "bart_tokenizer = AutoTokenizer.from_pretrained(bart_model_name)\n",
+    "\n",
+    "# Freeze base model parameters\n",
+    "for param in bart_base.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "\n",
+    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/bart"
    ]
   },
   {
@@ -737,7 +788,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BigBirdPegasus - Load in base model and tokenizer"
+    "# BigBirdPegasus - Load in base model and tokenizer\n",
+    "\n",
+    "pegasus_model_name = \"google/bigbird-pegasus-large-arxiv\"\n",
+    "\n",
+    "pegasus = BigBirdPegasusModel.from_pretrained(pegasus_model_name)\n",
+    "pegasus.to(DEVICE)\n",
+    "pegasus_tokenizer = AutoTokenizer.from_pretrained(pegasus_model_name)\n",
+    "\n",
+    "# Freeze base model parameters\n",
+    "for param in pegasus.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/bigbird_pegasus"
    ]
   },
   {
