Code cleanup & README

--- a/archive/generation_bart.ipynb
+++ b/archive/generation_bart.ipynb
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"sample.txt\", 'r') as f:\n",
+    "with open(\"metrics/sample.txt\", 'r') as f:\n",
     "    sample = [l.strip(\"\\n\") for l in f.readlines()]"
    ]
   },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
