--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
    ],
    "source": [
     "model = model.to(DEVICE)\n",
-    "with open(\"sample.txt\", 'r') as f:\n",
+    "with open(\"metrics/sample.txt\", 'r') as f:\n",
     "    sample = [l.strip(\"\\n\") for l in f.readlines()]\n",
     "# print(sample)\n",
     "summary = [summarize_text(l) for l in sample]\n",
