--- a/medical_summarization.ipynb
+++ b/medical_summarization.ipynb
@@ -20,25 +20,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Background Information & Approach"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO:\n",
-    "- Describe the background information for why this model is useful, particularly for elderly patients\n",
-    "- Describe the datasets we are using and which models we are evaluating\n",
-    "- Give instructions for how to run our code\n",
-    "\n",
-    "We can copy-paste most of this in from info we'll write on the slides"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Imports & Setup"
    ]
   },
@@ -52,14 +33,14 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
-    "import pandas as pd\n",
+    "import pandas as pd \n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.optim import AdamW\n",
-    "from transformers import PreTrainedTokenizer, T5Tokenizer, T5ForConditionalGeneration, AutoModelForCausalLM, AutoTokenizer, BertModel, BertTokenizer, BartModel, BigBirdPegasusModel"
+    "from transformers import PreTrainedTokenizer, T5Tokenizer, T5ForConditionalGeneration, AutoTokenizer, BartModel, AutoModelForSeq2SeqLM"
    ]
   },
   {
@@ -384,152 +365,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GPT-2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT2 - Load in base model and tokenizer\n",
-    "gpt2_model_name = \"gpt2\"\n",
-    "\n",
-    "gpt2 = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
-    "gpt2.to(DEVICE)\n",
-    "gpt2_tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
-    "\n",
-    "# Freeze base model parameters\n",
-    "for param in gpt2.parameters():\n",
-    "    param.requires_grad = False\n",
-    "\n",
-    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/gpt2#training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT2 - Define model (base model with an additional layer processing the output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT2 - Initialize fine-tunable model & optimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT2 - Create Wikismall data loaders for training, validation, and test "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT2 - Fine-tuning training loop for Wikismall dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPT2 - Fine-tuning training loop for MIMIC dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BERT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT - Load in base model and tokenizer\n",
-    "\n",
-    "bert_model_name = \"bert-base-uncased\"\n",
-    "\n",
-    "bert_base = BertModel.from_pretrained(\"bert-base-uncased\", torch_dtype=torch.float16)\n",
-    "bert_base.to(DEVICE)\n",
-    "bert_tokenizer = BertTokenizer.from_pretrained(bert_model_name)\n",
-    "\n",
-    "# Freeze base model parameters\n",
-    "for param in bert_base.parameters():\n",
-    "    param.requires_grad = False\n",
-    "\n",
-    "\n",
-    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/bert"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT - Define model (base model with an additional layer processing the output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT - Initialize fine-tunable model & optimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT - Create Wikismall data loaders for training, validation, and test "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT - Fine-tuning training loop for Wikismall dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT - Fine-tuning training loop for MIMIC dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### T5"
    ]
   },
@@ -606,7 +441,6 @@
     "# T5 - Initialize fine-tunable model & optimizer\n",
     "\n",
     "t5_simplifier = T5Simplifier(t5_base).to(DEVICE)\n",
-    "\n",
     "t5_optimizer = AdamW(t5_simplifier.layer1.parameters(), lr=5e-5)"
    ]
   },
@@ -681,8 +515,6 @@
    "source": [
     "# MIMIC - Load in base T5 model and tokenizer\n",
     "\n",
-    "# TODO: we should eventually be fine-tuning the version of T5 already fine-tuned on Wikismall here\n",
-    "\n",
     "t5_model_name = \"t5-base\"\n",
     "\n",
     "t5_base = T5ForConditionalGeneration.from_pretrained(t5_model_name)\n",
@@ -696,9 +528,60 @@
     "\n",
     "\n",
     "# MIMIC - create data loaders for T5 training, validation, and test\n",
-    "\n",
-    "# TODO: took 8 minutes to run with MIMIC_DATA_USAGE_FRACTION set to 0.25 - probably worth saving the final dataframes and just loading/using those directly\n",
     "t5_mimic_train_loader, t5_mimic_val_loader, t5_mimic_test_loader = load_mimic_dataset(mimic_df, t5_tokenizer, MIMIC_BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# T5 - Load in pre-trained model weights\n",
+    "model_path = f\"t5-wikismall-mimic-dir/checkpoint-11500\"\n",
+    "t5_model = T5ForConditionalGeneration.from_pretrained(model_path)\n",
+    "t5_tokenizer = T5Tokenizer.from_pretrained('t5-base')\n",
+    "\n",
+    "\n",
+    "MAX_LENGTH = 512\n",
+    "\n",
+    "def summarize_text_t5(text):\n",
+    "    inputs = t5_tokenizer.encode(\n",
+    "        \"summarize: \" + text,\n",
+    "        return_tensors='pt',\n",
+    "        max_length=MAX_LENGTH,\n",
+    "        truncation=True\n",
+    "    )\n",
+    "    inputs = inputs.to(DEVICE)\n",
+    "    len1 = len(inputs[0])\n",
+    " \n",
+    "    summary_ids = t5_model.generate(\n",
+    "        inputs,\n",
+    "        exponential_decay_length_penalty=((int) (len1 * 0.8), -1.05),\n",
+    "        encoder_repetition_penalty=0.3,\n",
+    "        no_repeat_ngram_size=4,\n",
+    "        max_length=50,\n",
+    "        num_beams=5,\n",
+    "        temperature=0.9,\n",
+    "    )\n",
+    " \n",
+    "    return t5_tokenizer.decode(summary_ids[0], skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# T5 - Generate a summary for a sample text\n",
+    "t5_model = t5_model.to(DEVICE)\n",
+    "with open(\"metrics/sample.txt\", 'r') as f:\n",
+    "    sample = [l.strip(\"\\n\") for l in f.readlines()]\n",
+    "\n",
+    "summary = [summarize_text_t5(l) for l in sample]\n",
+    "for s in summary:\n",
+    "    print(s)"
    ]
   },
   {
@@ -736,71 +619,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BART - Define model (base model with an additional layer processing the output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BART - Initialize fine-tunable model & optimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BART - Create Wikismall data loaders for training, validation, and test "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BART - Fine-tuning training loop for Wikismall dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BART - Fine-tuning training loop for MIMIC dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BigBirdPegasus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BigBirdPegasus - Load in base model and tokenizer\n",
+    "# BART - Load in portion of dataset for training, validation, and test\n",
+    "with open(\"metrics/sample.txt\", 'r') as f:\n",
+    "    sample = [l.strip(\"\\n\") for l in f.readlines()]\n",
     "\n",
-    "pegasus_model_name = \"google/bigbird-pegasus-large-arxiv\"\n",
+    "MIMIC_DATA_USAGE_ROWS = 5000\n",
+    "mimic_df = pd.read_csv(\"datasets/mimic-iv-ext-bhc/mimic-iv-bhc.csv\", nrows=MIMIC_DATA_USAGE_ROWS)\n",
+    "mimic_df.rename(columns={'input': 'source'}, inplace=True)\n",
     "\n",
-    "pegasus = BigBirdPegasusModel.from_pretrained(pegasus_model_name)\n",
-    "pegasus.to(DEVICE)\n",
-    "pegasus_tokenizer = AutoTokenizer.from_pretrained(pegasus_model_name)\n",
+    "mimic_sample = mimic_df.loc[0]['source']\n",
+    "mimic_target = mimic_df.loc[0]['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART - Load in pre-configured model weights\n",
     "\n",
-    "# Freeze base model parameters\n",
-    "for param in pegasus.parameters():\n",
-    "    param.requires_grad = False\n",
+    "model_path = f\"bart-mimic-dir/checkpoint-1000\"\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_path)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
     "\n",
-    "# For more info - https://huggingface.co/docs/transformers/en/model_doc/bigbird_pegasus"
+    "MAX_LENGTH = 1024\n",
+    "\n",
+    "def summarize_text(text):\n",
+    "    # Preprocess the text\n",
+    "    inputs = tokenizer.encode(\n",
+    "        \"summarize: \" + text,\n",
+    "        return_tensors='pt',\n",
+    "        max_length=MAX_LENGTH,\n",
+    "        truncation=True\n",
+    "    )\n",
+    "    inputs = inputs.to(DEVICE)\n",
+    " \n",
+    "    # Generate the summary\n",
+    "    summary_ids = model.generate(\n",
+    "        inputs,\n",
+    "        # encoder_repetition_penalty=0.9,\n",
+    "        no_repeat_ngram_size=4,\n",
+    "        max_length=600,\n",
+    "        num_beams=5,\n",
+    "        temperature=1,\n",
+    "    )\n",
+    " \n",
+    "    # Decode and return the summary\n",
+    "    return tokenizer.decode(summary_ids[0], skip_special_tokens=True)"
    ]
   },
   {
@@ -809,43 +675,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BigBirdPegasus - Define model (base model with an additional layer processing the output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BigBirdPegasus - Initialize fine-tunable model & optimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BigBirdPegasus - Create Wikismall data loaders for training, validation, and test "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BigBirdPegasus - Fine-tuning training loop for Wikismall dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BigBirdPegasus - Fine-tuning training loop for MIMIC dataset"
+    "# BART - Summarize Text\n",
+    "\n",
+    "model = model.to(DEVICE)\n",
+    "print(mimic_sample)\n",
+    "print(mimic_target)\n",
+    "\n",
+    "summary = summarize_text(mimic_sample)\n",
+    "print(summary)"
    ]
   },
   {
@@ -854,34 +691,6 @@
    "source": [
     "## Evaluate Model Performance"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### GPT-2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BERT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -902,20 +711,6 @@
    "metadata": {},
    "source": [
     "### BART"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BigBirdPegasus"
    ]
   },
   {
