Refactoring for fine-tuning and evaluation files

--- a/medical_summarization.ipynb
+++ b/medical_summarization.ipynb
@@ -94,7 +94,6 @@
     "WIKISMALL_TEST_SOURCE_PATH = \"datasets/wikismall/test_source.txt\"\n",
     "WIKISMALL_TEST_TARGET_PATH = \"datasets/wikismall/test_target.txt\"\n",
     "\n",
-    "# TODO: might want to adjust both of these\n",
     "WIKISMALL_BATCH_SIZE = 16\n",
     "WIKISMALL_MAX_LENGTH = 128"
    ]
@@ -225,14 +224,13 @@
     "\n",
     "MIMIC_DATASET_CSV_PATH = \"datasets/mimic-iv-ext-bhc/mimic-iv-bhc.csv\"\n",
     "\n",
-    "# TODO: this dataset is massive. we might not want to use all of it, to keep training times within reason.\n",
+    "# This dataset is massivw! To cut down on training times, we'll only be using a portion of the data.\n",
     "MIMIC_DATA_USAGE_FRACTION = 0.25\n",
     "\n",
     "RANDOM_STATE = 42\n",
     "MIMIC_TEST_SIZE = 0.2\n",
     "MIMIC_VAL_SIZE = 0.25  # Proportion of training data used for validation\n",
     "\n",
-    "# TODO: might want to adjust both of these\n",
     "MIMIC_BATCH_SIZE = 16\n",
     "MIMIC_MAX_LENGTH = 256"
    ]
@@ -684,41 +682,6 @@
     "summary = summarize_text(mimic_sample)\n",
     "print(summary)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Model Performance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### T5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BART"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
